--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.15)
 set(PROJECT_NAME ScratchBall)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS} -static-libgcc -static-libstdc++ -static")
+set(CMAKE_EXE_LINKER_FLAGS=-static-libgcc -static-libstdc++ -static)
 
 project(${PROJECT_NAME})
 
@@ -21,9 +23,11 @@ file(
     ${CMAKE_CURRENT_LIST_DIR}/core/header/*.inl
 )
 
+find_package(SFML 2.5.1 COMPONENTS system graphics window REQUIRED)
+
 include_directories(${CMAKE_CURRENT_LIST_DIR}/core/header)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-#target_link_libraries(${PROJECT_NAME} ${LIBRARY_NAME})
+target_link_libraries(${PROJECT_NAME} sfml-system sfml-graphics sfml-window)
